<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:hint="@string/textHint"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSizeLabel2"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />

    <SeekBar
        android:id="@+id/sizeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="6" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSizeButton"
        android:layout_marginTop="16dp" />
</LinearLayout>